--- a/package.json
+++ b/package.json
@@ -20,6 +20,6 @@
   "author": "David Ocetnik",
   "license": "MIT",
   "peerDependencies": {
-    "react-native": "<0.40.0"
+    "react-native": ">=0.40.0"
   }
 }
